--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,24 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+*.zen
+.DS_store
+
+gradio/model/
+gradio/tokenizer/
+gradio/config.json
+gradio/merges.txt
+gradio/predict.py
+gradio/pytorch_model.bin
+gradio/special_tokens_map.json
+gradio/tokenizer.json
+gradio/tokenizer_config.json
+gradio/vocab.json
+gradio/flagged/
+
+gradio/model.safetensors
+zenml_artifact/
+gradio/vocab.txt
+.idea
