--- a/configs/trainer_config.yaml
+++ b/configs/trainer_config.yaml
@@ -25,7 +25,7 @@ settings:
       - slack
       - github
     requirements: requirements.txt
-    dockerfile: Dockerfile
+    # dockerfile: Dockerfile
     environment:
       GIT_CURL_VERBOSE: 1
       GIT_TRACE: 1 
