--- a/configs/trainer_config.yaml
+++ b/configs/trainer_config.yaml
@@ -19,7 +19,7 @@ settings:
   docker:
     required_integrations:
       - s3
-      - kubeflow
+      - airflow
       - mlflow
       - aws
       - slack
